tests/invalid/comprehension_heterogeneous_tuple/main.py
def run_case() -> None:
    t: tuple[int, str] = (1, "hello")

    y: list[int] = [x for x in t]

if __name__ == "__main__":
    run_case()
